# trinity

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  docker-compose.prod.enterprise.yml  docker-compose.prod.yml  docker-compose.sibling.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quickstart.sh  template.yaml
.claude/agents/: test-runner.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: backend-image-smoke.yml  backend-unit-test.yml  (+13 more)
config/: canary-fleet.yaml
docs/: CLI.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  GITHUB_ISSUES_MIGRATION.md  KNOWN_ISSUES.md  OPENCODE_SUPPORT.md  POSTGRESQL_SETUP.md  TRINITY_COMPATIBLE_AGENT_GUIDE.md  agent-validation-spec.md
scripts/: 586-fleet-check.sh
src/cli/: README.md  pyproject.toml
src/cli/trinity_cli/: __init__.py  client.py  config.py  main.py  output.py
src/cli/trinity_cli/commands/: agents.py  auth.py  chat.py  health.py  schedules.py  skills.py  tags.py
tests/: README.md  conftest.py  db_harness.py  lint_sys_modules.py  lint_sys_modules_baseline.txt  registry.json  requirements-test.txt  run-core.sh  run-full.sh  run-integration.sh  run-smoke.sh  setup-env.sh  test_1083_callback_endpoint.py  test_817_subprocess_leak.py  test_access_grant_notification_unit.py  test_activities.py  test_agent_files.py  test_agent_health_signal.py  test_agent_quota.py  test_agent_sharing.py  test_agent_timeout.py  test_audit_log_unit.py  test_auth_failure_detection.py  test_canary_invariants.py  test_cb_probe_execution_close.py  test_channel_access_control.py  test_circuit_breaker_reset.py  test_cleanup_service.py  test_cli_access_request.py  test_credentials.py  test_deploy_local.py  test_email_auth.py  test_fan_out.py  test_files_guardrail_bypass.py  test_github_pat.py  test_github_pat_propagation_unit.py  test_idempotency.py  test_image_generation.py  test_inter_agent_timeout_unit.py  test_ip_rate_limit_fix.py  (+28 more)
(+899 files in other folders)
