[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-cli"
version = "0.0.0"  # Replaced at build time by CI from git tag (cli-vX.Y.Z)
description = "CLI for the Trinity Autonomous Agent Orchestration Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ability AI", email = "hello@ability.ai"},
]
keywords = ["trinity", "ai", "agents", "orchestration", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/abilityai/trinity"
Documentation = "https://github.com/abilityai/trinity/blob/main/docs/CLI.md"
Repository = "https://github.com/abilityai/trinity"
Issues = "https://github.com/abilityai/trinity/issues"

[project.scripts]
trinity = "trinity_cli.main:cli"

[tool.setuptools.packages.find]
include = ["trinity_cli*"]

[tool.setuptools.package-data]
trinity_cli = ["py.typed"]
